                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 28-04-2006 fixed: Video database views with large numbers of videos took a long time (needs rescan if you want genre information in the skin using ListItem.Genre).
 - 28-04-2006 fixed: Deletion and Editting of multi-path bookmarks.
 - 28-04-2006 fixed: PlayFile from webserver didn't deactivate the screensaver.
 - 28-04-2006 fixed: [ 1478222 ] SlideShowPath setting error
 - 28-04-2006 fixed: [ 1445347 ] Manual time set error
 - 28-04-2006 changed: Reverted the XBE title commit earlier.  They're now back to reading as UTF16 as they should be.
 - 28-04-2006 fixed: Viewport intersection wasn't working correctly, which meant some images with aspectratio set to scale could render outside their borders.
 - 27-04-2006 fixed: Big list view didn't show the thumb overlays.
 - 27-04-2006 fixed: Missing Database label message was not displayed correctly when GUI animations were performed.
 - 27-04-2006 changed: removed the 'search imdb' item from context menu since it's not contextual. use the button on the left instead.
 - 27-04-2006 changed: XBE titles are now converted from string charset, rather from UTF16.
 - 27-04-2006 changed: Playlists location is now a bookmark in Music and Videos.
 - 27-04-2006 changed: switched info/title remote mappings in visualisation window.
 - 27-04-2006 fixed: Settings item didn't show on context menu when in the root bookmark listing.
 - 27-04-2006 removed: Unused "Enter" button in XLink Kai.
 - 27-04-2006 changed: volume up/down/mute mapped to remote 3/6/9 in keymap.
 - 27-04-2006 fixed: [ 1475599 ] Watched movie bug.