@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 28-04-2006 fixed: Player.Duration and Player.TimeRemaining would return 00:00 if duration was available.
  - 28-04-2006 fixed: Video database views with large numbers of videos took a long time (needs rescan if you want genre information in the skin using ListItem.Genre).
  - 28-04-2006 fixed: Deletion and Editting of multi-path bookmarks.
  - 28-04-2006 fixed: PlayFile from webserver didn't deactivate the screensaver.
